--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
             <div class="card px-3 py-4 col-md-6 col-lg-3">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="http://htttps://app.prontloc.com.br/Cadastro"><img src="assets/images/cadastro-pront-506x510.jpg" alt="Cadastro Pront Loc"></a>
+                        <a href="https://app.prontloc.com.br/Cadastro"><img src="assets/images/cadastro-pront-506x510.jpg" alt="Cadastro Pront Loc"></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">Cadastrar</div>
                     </div>
                     <div class="card-box">
                         <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black align-center display-2">Cadastrar</h3>
                         <p class="mbr-card-text mbr-fonts-style align-center display-7">Preencha o Formulário de <strong>Cadastro</strong> do Cliente</p>
-                        <div class="mbr-section-btn align-center pt-3"><a href="https://app.prontloc.com.br/cadastro" class="btn btn-md btn-warning display-4">Entrar</a></div>
+                        <div class="mbr-section-btn align-center pt-3"><a href="https://app.prontloc.com.br/Cadastro" class="btn btn-md btn-warning display-4">Entrar</a></div>
                     </div>
                 </div>
             </div>
@@ -822,7 +822,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Obrigado! Recebemos sua solicitação. Verifique seu e-mail e acompanhe tudo por lá.</div>
 
                     <form class="form-inline" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="kdQDEdjHEs8d/kTQaEFpEngWg6CMXOynpcrfHSuuTGayW0AysktSQLUfM8FzsGDfUBgniuNzQVJrV2nHoqGsC8nQk4imUoeX43dzE41GxknuBibB6Y5MRiJQ+yYQqSrz" data-form-email="true">
+                        <input type="hidden" value="Z66zYJ/ain3a/HQl9D8/FvgUZyd6SSKATaLJepbMSmovGx3TinVkAgvxRUdHNmvJMz0u+2nqVy0qDMJIUkDToYfrNctdIk9OxH00iq7tJc8uWIJ2wU8RPGHsST8Ut9jQ" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Insira seu e-mail" id="email-footer3-3">
                         </div>
